Commented out code that attempted to make 2nd call and fixed spacing on no poster items

--- a/css/style.css
+++ b/css/style.css
@@ -238,10 +238,6 @@ button {
 
 }
 
-#overlay {
-  width: 100%;
-}
-
 @media (min-width: 769px) {
   body {
     padding-top: 115px;
